fixed overflow

--- a/src/routes/experience/experience.css
+++ b/src/routes/experience/experience.css
@@ -3,6 +3,8 @@
   background-color: #8EC5FC;
   background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
   padding-top: 2rem;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .experience-column{
